2008-07-23  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c: Code clean ups.
	
	* src/trackerd/tracker-processor.c: Improved efficiency of the get
	queue function we use in each timeout to send files to the indexer.

2008-07-23  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: 
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-monitor.c: 
	* src/trackerd/tracker-processor.c: Don't create a gchar* for
	EVERY file we crawl just to move it from one queue to another,
	instead, just make the queue use GFile pointers and ref the one we
	are passed. This has halved the memory consumption of the daemon
	and speed things up. It also shouldn't hang while crawling now.

2008-07-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus.c: Style fixes
	* src/trackerd/tracker-xesam.c: Wrapped db related functions

2008-07-22  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-index.c:
	Use the new TrackerIndexItem instead old duplicate code.
	
2008-07-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-dbus.h:
	* src/trackerd/tracker-indexer.h:

	Moving some code around

2008-06-22  Ivan Frade  <ivan.frade@nokia.com>

	* tests/trackerd/example.index: Small QDBM index to use in tests.
	
	* tests/trackerd/run-tests.sh (removed)
	* configure.ac: Create symbolic links in autoconf instead a bash
	script.
	
2008-07-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-utils.c:

	Wrapped all database access in the DBus implementations with two 
	convenient functions. 

2008-07-22  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/Makefile.am